Fixed the blurriness of the Profile window

--- a/styles.css
+++ b/styles.css
@@ -150,3 +150,8 @@
 #profProfile>div:nth-child(2) {
   margin-left: initial !important;
 }
+
+.attention-display {
+  -webkit-transform: translate(-50.5%,-50.5%) !important;
+  transform: translate(-50.5%,-50.5%) !important;
+}
